# learn-RL-with-Mario

./: .gitignore  A-Brief-Introduction-to-RL.html  A-Brief-Introduction-to-RL.md  README.md  REFACTORING_SUMMARY.md  configs.yaml  play_mario.py  play_mario_dreamer.py  play_mario_ppo.py  pyproject.toml  requirements.txt  train_mario.py  train_mario_dreamer.py  train_mario_ppo.py
PPO/: README.md  __init__.py  networks.py  ppo_agent.py  rollout_buffer.py
configs/: dreamer_configs.yaml  ppo_configs.yaml
dreamerv3/: README.md  __init__.py  actor_critic.py  world_model.py
dreamerv3/networks/: __init__.py  encoder_decoder.py  rssm.py
dreamerv3/utils/: __init__.py  distributions.py  tools.py
envs/: __init__.py  mario.py  vec_mario.py
test_scripts/: README.md  extract_episode.py
