[project]
name = "dreamerv3-torch-mario"
version = "0.1.0"
description = "DreamerV3 implementation for Super Mario Bros using PyTorch"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.8.0",
    "numpy>=1.23.5,<2.0.0",  # gym-super-mario-bros doesn't support numpy 2.0
    "ruamel.yaml>=0.17.4",
    "gym-super-mario-bros>=7.4.0",
    "nes-py>=8.2.1",
    "gym==0.25.2",
    "tensorboard>=2.17.1",
    "opencv-contrib-python>=4.5.5",
    "imageio>=2.37.0",
]

[tool.hatch.build.targets.wheel]
packages = ["dreamerv3", "envs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
