[project]
name = "dreamerv3-torch-mario"
version = "0.1.0"
description = "DreamerV3 implementation for Super Mario Bros using PyTorch"
requires-python = "==3.11.13"
dependencies = [
    "absl-py==2.3.1",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "cloudpickle==3.1.1",
    "decorator==4.4.2",
    "filelock==3.20.0",
    "fsspec==2025.9.0",
    "grpcio==1.75.1",
    "gym==0.25.1",
    "gym-notices==0.1.0",
    "gym-super-mario-bros==7.4.0",
    "idna==3.11",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "jinja2==3.1.6",
    "markdown==3.9",
    "markupsafe==3.0.3",
    "moviepy==1.0.3",
    "mpmath==1.3.0",
    "nes-py==8.2.1",
    "networkx==3.5",
    "numpy==1.26.4",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.3",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvtx-cu12==12.8.90",
    "opencv-python==4.11.0.86",
    "packaging==25.0",
    "pillow==11.3.0",
    "proglog==0.1.12",
    "protobuf==6.32.1",
    "pyglet==1.5.21",
    "ruamel-yaml==0.17.4",
    "requests==2.32.5",
    "setuptools==80.9.0",
    "sympy==1.14.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "tqdm==4.67.1",
    "triton==3.4.0",
    "typing-extensions==4.15.0",
    "urllib3==2.5.0",
    "werkzeug==3.1.3",
]

[tool.hatch.build.targets.wheel]
packages = ["dreamerv3", "envs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
